# huffman

./: Huffman.hs  PQ.hs  README.md  hcompress.hs  hdecode.hs  hencode.hs  huffman.cabal  huffmantest.hs  huffmanutil.cabal  testhuffman.hs
Data/: Huffman.hs  Tests.hs  test.hs
