Name: huffman
Description: Efficient Huffman encoding and decoding.
             Factored for easy experimentation and reuse.  Uses efficient
             two-heap Huffman tree construction.
Build-Type: Simple
Version: 0.1.1
License: BSD3
License-File: COPYING
Author: Bart Massey <bart@cs.pdx.edu>
Copyright: Copyright (C) 2008 Bart Massey
Maintainer: Bart Massey <bart@cs.pdx.edu>
Homepage: http://wiki.cs.pdx.edu/bartforge/huffman
Category: Data
Build-Depends: base, heap, containers
Synopsis: Efficient Huffman encoding and decoding
Exposed-Modules: Data.Huffman
Stability: Alpha
Extra-Source-Files: hencode.hs hdecode.hs
